--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -3,10 +3,10 @@ server.port=8080
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
-# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=kh11a
-spring.datasource.password=kh11a
+# spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=semi
+spring.datasource.password=semi
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
