--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=kh11 
-spring.datasource.password=kh11
+spring.datasource.url=jdbc:oracle:thin:@localhost:15211:xe
+spring.datasource.username=kh11a 
+spring.datasource.password=kh11a
 
 # DBCP(DataBase Connection Pool)
 spring.datasource.dbcp2.max-total=20
@@ -29,5 +29,4 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-# custom.fileupload.path=D:/upload
-
+custom.fileupload.path=D:/upload
