--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -30,4 +30,4 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-custom.fileupload.path=C:/upload
+custom.fileupload.path=D:/upload
