절대주소 수정

--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
-#server.port=8080
-server.port=80
+server.port=8080
+#server.port=80
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -32,5 +32,5 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-#custom.fileupload.path=D:/upload
-custom.fileupload.path=D:/upload/kh11a
+custom.fileupload.path=D:/upload
+#custom.fileupload.path=D:/upload/kh11a
