--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -1,14 +1,19 @@
 # server setting
-server.port=8080
+#server.port=8080
+server.port=80
+#server.servlet.context-path=/home
+#server.servlet.context-path=${pageContext.request.contextPath}
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11a
 spring.datasource.password=kh11a
 
 # DBCP(DataBase Connection Pool)
-spring.datasource.dbcp2.max-total=10
+spring.datasource.dbcp2.max-total=20
 spring.datasource.dbcp2.min-idle=0
 spring.datasource.dbcp2.max-idle=10
 spring.datasource.dbcp2.max-wait-millis=3000
@@ -29,4 +34,5 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-custom.fileupload.path=D:/upload
+#custom.fileupload.path=D:/upload
+custom.fileupload.path=D:/upload/kh11a
