--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -33,4 +33,6 @@ spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
 custom.fileupload.path=D:/upload
-#custom.fileupload.path=D:/upload/kh11a
+#개발환경
+#custom.fileupload.path=C:/upload/kh11a 
+#배포환경
