--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.mvc.static-path-pattern=/static/**
 spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
-#custom.fileupload.path=D:/upload
+custom.fileupload.path=D:/upload
 #개발환경
-custom.fileupload.path=C:/upload/kh11a
+#custom.fileupload.path=C:/upload/kh11a
 #배포환경
