--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
 server.port=80
-server.servlet.context-path=/home
+#server.servlet.context-path=/home
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
