--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # server setting
 server.port=80
-server.servlet.context-path=/home
+#server.servlet.context-path=/home
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -34,6 +34,5 @@ spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
 custom.fileupload.path=D:/upload
-#개발환경
+
 #custom.fileupload.path=C:/upload/kh11a
-#배포환경
