--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.port=80
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
-# spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe // 이거면 강사님주소인데, 거기에는 우리께 없잖아 오류뜬게 sql 유저네임이랑 패스워드가 거절됐떼
+# spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
+spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11a
 spring.datasource.password=kh11a
 
