--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -5,8 +5,8 @@ server.servlet.context-path=/pocketdo
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 # spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
-# spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
+# spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
+spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11a
 spring.datasource.password=kh11a
 
