--- a/poketdo/src/main/resources/application.properties
+++ b/poketdo/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.servlet.context-path=/pocketdo
 
 # database setting
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-# spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+ spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 # spring.datasource.url=jdbc:oracle:thin:@khds-c.iptime.org:15211:xe
-spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
+#spring.datasource.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
 spring.datasource.username=kh11a
 spring.datasource.password=kh11a
 
@@ -33,4 +33,4 @@ spring.web.resources.static-locations=classpath:/static/
 
 # custom setting
 # custom.fileupload.path=D:/upload
-custom.fileupload.path=D:/upload/kh11a
+custom.fileupload.path=C:/upload/kh11a
